[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/flies/fly_bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/roach_and_flies/roach_fly_pattern.gd" type="Script" id=2]
[ext_resource path="res://battle/dodge_box_1.png" type="Texture" id=3]
[ext_resource path="res://battle/battle_btm_layer_black.png" type="Texture" id=4]
[ext_resource path="res://enemies/roach_and_flies/cockroach0.png" type="Texture" id=5]
[ext_resource path="res://enemies/roach_and_flies/spit_bullet.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -20.1587, -456.091, 20.1587, 456.091, 728, -314, 280.593, -242.999, -280.593, 242.999, 128, 1283 )
}

[node name="roach_fly_pattern" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="roach_shooter" type="Node2D" parent="."]

[node name="bullets" type="Node2D" parent="roach_shooter"]

[node name="spit_bullet" parent="roach_shooter/bullets" instance=ExtResource( 7 )]

[node name="spit_bullet2" parent="roach_shooter/bullets" instance=ExtResource( 7 )]

[node name="spit_bullet3" parent="roach_shooter/bullets" instance=ExtResource( 7 )]

[node name="roaches" type="Node2D" parent="roach_shooter"]

[node name="roach_up" type="Sprite" parent="roach_shooter/roaches"]
position = Vector2( 960, -200 )
rotation = -3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="roach_right" type="Sprite" parent="roach_shooter/roaches"]
position = Vector2( 2120, 540 )
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="roach_down" type="Sprite" parent="roach_shooter/roaches"]
position = Vector2( 960, 1280 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="roach_left" type="Sprite" parent="roach_shooter/roaches"]
position = Vector2( -200, 540 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="fly_bullet" parent="." instance=ExtResource( 1 )]

[node name="fly_bullet2" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 0 )
curve = SubResource( 1 )
